# BSidesCPT2019-Firmware

./: .gitignore  BSides2019CPT-Firmware.ino  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  OTAUpdate.cpp  OTAUpdate.h  README.md  TJpg_Decoder.cpp  TJpg_Decoder.h  User_Config.h  about.cpp  about.hpp  achievements.cpp  achievements.h  achievementsdata.h  asteroids.cpp  asteroids.hpp  asteroids_images.h  background.h  bleKeyboard.cpp  bleKeyboard.h  bt.cpp  bt.hpp  car.h  carGame.h  cryptoRunner.cpp  cryptoRunner.h  cryptoRunnerLogo.h  feelings.cpp  feelings.hpp  fire.cpp  fire.h  fixpoint.h  font_data.h  game.cpp  game.hpp  matrixscroller.cpp  matrixscroller.hpp  (+39 more)
challenge_beacon.ino/: challenge_beacon.ino.ino
docker/: ArduinoIDE.txt  Dockerfile
headerimages/: ContrastSecLogo.jpg.h  DaVinciLabs.jpg.h  ESP32GameOn240x240.jpg.h  Mike.jpg.h  TonyM.jpg.h  achievement_unlocked.jpg.h  achievement_unlocked_high.jpg.h  amym.jpg.h  bSidesCapeTown.jpg.h  brents.jpg.h  bsidesplaceholder.jpg.h  byron_rudman.jpg.h  chrisk.jpg.h  christog.jpg.h  christog2.jpg.h  emo_alt_scared.jpg.h  emo_angry.jpg.h  emo_cool.jpg.h  emo_kissy.jpg.h  emo_left.jpg.h  emo_right.jpg.h  emo_sad.jpg.h  emo_scared.jpg.h  emo_tongue.jpg.h  fine.jpg.h  gerardd.jpeg.h  hackerjeop.jpg.h  hacktheplanet.jpg.h  justinp.jpg.h  kgothatso_ngako.jpg.h  leonj.jpg.h  lightningtalks.jpg.h  philipg.jpg.h  philipp_krenn.jpg.h  robertf.jpg.h  silent_dzikiti.jpg.h
images/: Car.h  CarLeft.h  CarRight.h  ESP32GameOn240x240.pdn  Emo-A-Crying.png.h  Emo-B-Sad.png.h  Emo-D-Love.png.h  Emo-L-Cool.png.h  Emo-R-Angry.png.h  Emo-Start-Left.png.h  Emo-Start-Right.png.h  Emo-U-Happy.png.h  ManualHeightMap.pdn  bmp2c.ini  convert.py  (+1 more)
(+34 files in other folders)
